Aumento da cobertura dos testes e refatoração para se adequar aos testes